# cr

./: .gitignore  dependency_tree.txt  main.py  notebook_inits.py  notes.txt  polars-trials.ipynb  readme.md  reqs.txt  scratch_pad.ipynb
rust-src/cr-price/: .gitignore  Cargo.toml  dep_tree.txt  readme.md
rust-src/cr-price/src/: main.rs
