[package]
name = "cr-price"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
polars = { version = "0.51.0", features = ["full"] }
polars-core = "0.51.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[[bin]]
name="cr-price"
path="src/main.rs"